# MineGuard

./: Cargo.toml  README.md
src/: config.rs  error.rs  instance.rs  lib.rs  utils.rs
src/config/: config.rs  mod.rs  stream.rs  version.rs
src/instance/: handle.rs  types.rs
src/manifests/: vanilla.rs
src/server/: domain.rs  mod.rs
