[package]
name = "mgrewrite"
version = "0.1.0"
edition = "2024"

[features]
default = ["core", "mc-vanilla"]

core = ["dep:serde", "dep:serde_json", "dep:uuid", "dep:tokio", "dep:tokio-util"]

version-custom = []

events = []

mc-vanilla = []

mc-paper = []
tokio = ["dep:tokio"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = {version = "1.0.145", optional = true}
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-std", "io-util", "process", "rt-multi-thread"], optional = true }
tokio-util ={version = "0.7.17", optional = true} 
uuid = { version = "1.19.0", features = ["serde", "v4"], optional = true }
